[Fixed] - ObservableCollection XamarinEssential when run the app

--- a/Essentials/Views/XamarinEssentialsViews.xaml
+++ b/Essentials/Views/XamarinEssentialsViews.xaml
@@ -5,7 +5,7 @@
              Title="App information view">
     <ContentPage.Content>
       <ListView
-            SelectedItem="{Binding OnSelectedItem}"
+            SelectedItem="{Binding OnSelectedItem, Mode=TwoWay}"
             ItemsSource="{Binding XamarinEssential}">
         <ListView.ItemTemplate>
           <DataTemplate>
