--- a/Essentials/Views/AppInformationView.xaml
+++ b/Essentials/Views/AppInformationView.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="Essentials.Views.AppInformationView"
-             Title="App information view"
+             Title="App information"
              BindingContext="Essentials.EssentialsBindingContext">
     <ContentPage.Content>
         <StackLayout Orientation="Vertical" Spacing="10">
