--- a/Essentials/Views/BatteryView.xaml
+++ b/Essentials/Views/BatteryView.xaml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             x:Class="Essentials.Views.BatteryView">
+             x:Class="Essentials.Views.BatteryView"
+             Title="Battery">
     <ContentPage.Content>
         <StackLayout Orientation="Vertical" Spacing="10" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
             <Button Text="Battery Level" Command="{Binding BatteryLevelCheckCommand}" />
