--- a/Essentials/Views/ClipboardView.xaml
+++ b/Essentials/Views/ClipboardView.xaml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             x:Class="Essentials.Views.ClipboardView">
+             x:Class="Essentials.Views.ClipboardView"
+             Title="Clipboard">
     <ContentPage.Content>
+        <StackLayout           
+            VerticalOptions="CenterAndExpand"    
+            HorizontalOptions="CenterAndExpand">
+                <Button Text="Copy"
+                    Command="{Binding ClipSetTextCommand}" />
+                <Button Text="Paste"
+                    Command="{Binding ClipGetTextCommand}" />
+            
+                <Label Text="{Binding TextClip, Mode=TwoWay}" />
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
