--- a/Essentials/Views/ConnectivityView.xaml
+++ b/Essentials/Views/ConnectivityView.xaml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Essentials.Views.ConnectivityView">
+             x:Class="Essentials.Views.ConnectivityView"
+             Title="Connectivity">
     <ContentPage.Content>
+        <StackLayout           
+            VerticalOptions="CenterAndExpand"    
+            HorizontalOptions="CenterAndExpand">
+                <Button Text="Check internet"
+                    VerticalOptions="CenterAndExpand"    
+                    HorizontalOptions="CenterAndExpand"
+                    Command="{Binding CheckConnectivityCommand}" />
+            
+                <Label Text="{Binding StatusConnectivity, Mode=TwoWay}" />
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
