--- a/Essentials/Views/DeviceInformationView.xaml
+++ b/Essentials/Views/DeviceInformationView.xaml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Essentials.Views.DeviceInformationView">
+             x:Class="Essentials.Views.DeviceInformationView"
+             Title="Device Information">
     <ContentPage.Content>
+        <StackLayout Orientation="Vertical" Spacing="10">
+            <Label Text="{Binding Device}" />
+            <Label Text="{Binding Manufacturer}" />
+            <Label Text="{Binding DeviceName}" />
+            <Label Text="{Binding VersionDeviceInfo}" />
+            <Label Text="{Binding Platform}" />
+            <Label Text="{Binding Idiom}" />
+            <Label Text="{Binding Version}" />
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
