--- a/Essentials/Views/FlashlightView.xaml
+++ b/Essentials/Views/FlashlightView.xaml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Essentials.Views.FlashlightView">
+             x:Class="Essentials.Views.FlashlightView"
+             Title="Flashlight">
     <ContentPage.Content>
+        <StackLayout           
+            VerticalOptions="CenterAndExpand"    
+            HorizontalOptions="CenterAndExpand">
+                <Button Text="Flash light"
+                    Command="{Binding FlashlightTurnCommand}" />
+            
+                <Label Text="{Binding Flash, Mode=TwoWay}" />
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
