--- a/Essentials/Views/PhoneDialerView.xaml
+++ b/Essentials/Views/PhoneDialerView.xaml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             x:Class="Essentials.Views.PhoneDialerView">
+             x:Class="Essentials.Views.PhoneDialerView"
+             Title="Phone Dialer">
     <ContentPage.Content>
+        <Button Text="Teléfono"
+            VerticalOptions="CenterAndExpand"    
+            HorizontalOptions="CenterAndExpand"
+            Command="{Binding PhoneCallCommand}" />
     </ContentPage.Content>
 </ContentPage>
