--- a/Essentials/Views/ShareView.xaml
+++ b/Essentials/Views/ShareView.xaml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             x:Class="Essentials.Views.ShareView">
+             x:Class="Essentials.Views.ShareView"
+             Title="Share">
     <ContentPage.Content>
+        <Button Text="Share"
+            VerticalOptions="CenterAndExpand"    
+            HorizontalOptions="CenterAndExpand"
+            Command="{Binding ShareUrlCommand}" />
     </ContentPage.Content>
 </ContentPage>
