--- a/Essentials/Views/VibrationView.xaml
+++ b/Essentials/Views/VibrationView.xaml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             x:Class="Essentials.Views.VibrationView">
+             x:Class="Essentials.Views.VibrationView"
+             Title="Vibration">
     <ContentPage.Content>
+        <Button Text="Vibration"
+            VerticalOptions="CenterAndExpand"    
+            HorizontalOptions="CenterAndExpand"
+            Command="{Binding VibrationActiveCommand}" />
     </ContentPage.Content>
 </ContentPage>
